# youtube-downloader

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  script.js  splitter.js
src/: youtube_downloader.py
src/domain/: constants.py  dependencies.py  types.py
src/domain/handler/: donwload_audio.py  transcribe_audio.py
src/infra/: core_types.py  minio.py  redis.py
src/tests/domain/: test_download_audio.py  test_integration.py
src/tests/infra/: test_minio.py  test_redis.py
